--- a/src/main/resources/displayMarket-view.fxml
+++ b/src/main/resources/displayMarket-view.fxml
@@ -9,8 +9,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="925.0" prefWidth="1392.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.MarketDisplayController">
-    <TableView fx:id="marketTable" layoutX="39.0" layoutY="34.0" onMouseClicked="#getMarketInfo" prefHeight="787.0" prefWidth="527.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.MarketDisplayController">
+    <TableView fx:id="marketTable" layoutX="39.0" layoutY="34.0" onMouseClicked="#getMarketInfo" prefHeight="471.0" prefWidth="527.0">
         <columns>
          <TableColumn fx:id="colName" text="Name" />
          <TableColumn fx:id="colAddress" text="Address" />
@@ -19,13 +19,22 @@
          <TableColumn fx:id="colZipCode" text="Zip Code" />
         </columns>
     </TableView>
-   <Pane layoutX="753.0" layoutY="34.0" prefHeight="410.0" prefWidth="368.0">
+   <Pane layoutX="753.0" layoutY="34.0" prefHeight="273.0" prefWidth="233.0">
       <children>
-         <ImageView fx:id="marketImage" fitHeight="384.0" fitWidth="348.0" layoutX="10.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id="marketImage" fitHeight="254.0" fitWidth="219.0" layoutX="10.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       </children>
    </Pane>
-   <Pane layoutX="14.0" layoutY="830.0" prefHeight="81.0" prefWidth="248.0">
+   <Pane layoutX="132.0" layoutY="532.0" prefHeight="81.0" prefWidth="304.0">
       <children>
+         <Pane fx:id="back1" layoutX="166.0" layoutY="14.0" onMouseClicked="#addMarket" prefHeight="59.0" prefWidth="60.0">
+            <children>
+               <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" onMouseClicked="#addMarket" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@images/add.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </Pane>
          <Pane layoutX="94.0" layoutY="14.0" onMouseClicked="#updateMarket" prefHeight="59.0" prefWidth="60.0">
             <children>
                <ImageView fitHeight="52.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
@@ -44,7 +53,7 @@
                </ImageView>
             </children>
          </Pane>
-         <Pane fx:id="back" layoutX="161.0" layoutY="14.0" onMouseClicked="#goBack" prefHeight="59.0" prefWidth="60.0">
+         <Pane fx:id="back" layoutX="230.0" layoutY="14.0" onMouseClicked="#goBack" prefHeight="59.0" prefWidth="60.0">
             <children>
                <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                   <image>
@@ -55,7 +64,7 @@
          </Pane>
       </children>
    </Pane>
-   <Pane layoutX="585.0" layoutY="494.0" prefHeight="418.0" prefWidth="726.0">
+   <Pane layoutX="575.0" layoutY="296.0" prefHeight="418.0" prefWidth="683.0">
       <children>
          <TextField fx:id="updateName" layoutX="61.0" layoutY="113.0" prefHeight="24.0" prefWidth="257.0" promptText="market's name" />
          <TextField fx:id="updateRegion" layoutX="390.0" layoutY="113.0" prefHeight="24.0" prefWidth="257.0" promptText="region" />
@@ -67,7 +76,6 @@
          <Label fx:id="controlAddress" layoutX="61.0" layoutY="228.0" prefHeight="24.0" prefWidth="257.0" />
          <Label fx:id="controllRegion" layoutX="390.0" layoutY="149.0" prefHeight="24.0" prefWidth="257.0" textFill="RED" />
          <Label fx:id="controllZipCode" layoutX="390.0" layoutY="228.0" prefHeight="24.0" prefWidth="257.0" textFill="RED" />
-         <Label layoutX="532.0" layoutY="371.0" prefHeight="33.0" prefWidth="180.0" text="Powred By CodeWarriors" />
       </children>
    </Pane>
 </AnchorPane>
