--- a/src/main/resources/user/updateUser.fxml
+++ b/src/main/resources/user/updateUser.fxml
@@ -16,101 +16,122 @@
 <ScrollPane hmax="600.0" hmin="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.user.UserController">
     <content>
         <AnchorPane>
-            <HBox alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                <children>
-                    <VBox fillWidth="false" maxWidth="1.7976931348623157E308">
-                        <TitledPane layoutX="10.0" layoutY="10.0" text="Picture">
-                            <content>
-                                <VBox alignment="CENTER" spacing="5.0">
-                                    <children>
-                                        <HBox alignment="CENTER" spacing="15.0">
-                                            <children>
-                                                <VBox spacing="5.0">
-                                                    <children>
-                                                        <ImageView fx:id="profileImageView" fitHeight="100" fitWidth="100" preserveRatio="true">
-                                                            <image>
-                                                                <Image url="@../images/default_user.png" />
-                                                            </image>
-                                                        </ImageView>
-                                                    </children>
-                                                </VBox>
-                                                <VBox alignment="CENTER" layoutX="460.0" layoutY="10.0" spacing="10.0">
-                                                    <children>
-                                                        <Button mnemonicParsing="false" onAction="#openFileChooser" prefWidth="100.0" text="Choose picture" />
-                                                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#removePicture" prefWidth="100.0" text="Remove picture" />
-                                                    </children>
-                                                </VBox>
-                                            </children>
-                                            <VBox.margin>
-                                                <Insets bottom="4.0" />
-                                            </VBox.margin>
-                                        </HBox>
-                                        <Label fx:id="profilePictureUpdateMessageLabel" />
-                                        <Button maxHeight="35.0" minHeight="35.0" onAction="#performUpdatePicture" prefHeight="35.0" prefWidth="500.0" text="Submit" />
-                                    </children>
-                                </VBox>
-                            </content>
-                        </TitledPane>
-                        <!-- Section 1: Information -->
-                        <TitledPane text="Information">
-                            <VBox spacing="5.0">
-                                <Label text="Phone:" />
-                                <TextField fx:id="phoneField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                <VBox fx:id="phoneErrorsContainer" />
-                                <Label text="Address:" />
-                                <TextField fx:id="addressField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                <VBox fx:id="addressErrorsContainer" />
-                                <Label fx:id="infoUpdateMessageLabel" />
-                                <Button maxHeight="35.0" minHeight="35.0" onAction="#updateInformation" prefHeight="35.0" prefWidth="500.0" text="Update Information" />
-                            </VBox>
-                        </TitledPane>
-
-                        <!-- Section 2: Change Email -->
-                        <TitledPane text="Change Email">
-                            <VBox spacing="5.0">
-                                <Label text="Current Email:" />
-                                <TextField fx:id="currentEmailField" editable="false" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                <Label text="New Email:" />
-                                <TextField fx:id="newEmailField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                <VBox fx:id="newEmailErrorsContainer" />
-                                <Label text="Password:" />
-                                <PasswordField fx:id="passwordForEmailField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                <VBox fx:id="passwordForEmailErrorsContainer" />
-                                <Label fx:id="emailUpdateMessageLabel" />
-                                <Button maxHeight="35.0" minHeight="35.0" onAction="#changeEmail" prefHeight="35.0" prefWidth="500.0" text="Change Email" />
-                            </VBox>
-                        </TitledPane>
-
-
-                        <!-- Section 3: Change Password -->
-                        <TitledPane text="Change Password">
-                            <VBox spacing="5.0">
-                                <Label text="Old Password:" />
-                                <PasswordField fx:id="oldPasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                <VBox fx:id="oldPasswordErrorsContainer" />
-                                <Label text="New Password:" />
-                                <PasswordField fx:id="newPasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                <VBox fx:id="newPasswordErrorsContainer" />
-                                <Label fx:id="passwordUpdateMessageLabel" />
-                                <Button maxHeight="35.0" minHeight="35.0" onAction="#changePassword" prefHeight="35.0" prefWidth="500.0" text="Change Password" />
-                            </VBox>
-                        </TitledPane>
-                  <TitledPane layoutX="10.0" layoutY="763.0" text="Delete Account">
-                     <content>
-                        <VBox spacing="5.0">
-                           <children>
-                              <Label text="Password:" />
-                              <PasswordField fx:id="deletePasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                              <VBox fx:id="deletePasswordErrorsContainer" />
-                              <Label fx:id="deleteMessageLabel" />
-                              <Button maxHeight="35.0" minHeight="35.0" onAction="#deleteAccount" prefHeight="35.0" prefWidth="500.0" style="-fx-background-color: #ed372d;" text="Delete Account" textFill="WHITE" />
-                           </children>
-                        </VBox>
-                     </content>
-                  </TitledPane>
-                    </VBox>
-                </children>
+            <HBox alignment="CENTER" prefHeight="66.0" prefWidth="51.0" AnchorPane.bottomAnchor="1165.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="483.0" AnchorPane.topAnchor="0.0">
+            <children>
+               <Button fx:id="backButton" onAction="#returnToPostsPage" styleClass="back-button">
+                  <graphic>
+                     <ImageView fitHeight="16" fitWidth="16" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@../icons/back-icon.png" />
+                        </image>
+                     </ImageView>
+                  </graphic>
+               </Button>
+            </children>
             </HBox>
+         <HBox alignment="CENTER" layoutX="10.0" layoutY="68.0" prefHeight="1104.0" prefWidth="522.0">
+            <children>
+               <VBox fillWidth="false" maxWidth="1.7976931348623157E308">
+                  <children>
+                     <TitledPane layoutX="10.0" layoutY="10.0" prefHeight="159.0" prefWidth="522.0" text="Picture">
+                        <content>
+                           <VBox alignment="CENTER" spacing="5.0">
+                              <children>
+                                 <HBox alignment="CENTER" spacing="15.0">
+                                    <children>
+                                       <VBox spacing="5.0">
+                                          <children>
+                                             <ImageView fx:id="profileImageView" fitHeight="100" fitWidth="100" preserveRatio="true">
+                                                <image>
+                                                   <Image url="@../images/default_user.png" />
+                                                </image>
+                                             </ImageView>
+                                          </children>
+                                       </VBox>
+                                       <VBox alignment="CENTER" layoutX="460.0" layoutY="10.0" spacing="10.0">
+                                          <children>
+                                             <Button mnemonicParsing="false" onAction="#openFileChooser" prefWidth="100.0" text="Choose picture" />
+                                             <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#removePicture" prefWidth="100.0" text="Remove picture" />
+                                          </children>
+                                       </VBox>
+                                    </children>
+                                    <VBox.margin>
+                                       <Insets bottom="4.0" />
+                                    </VBox.margin>
+                                 </HBox>
+                                 <Label fx:id="profilePictureUpdateMessageLabel1" />
+                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#performUpdatePicture" prefHeight="35.0" prefWidth="500.0" text="Submit" />
+                              </children>
+                           </VBox>
+                        </content>
+                     </TitledPane>
+                     <TitledPane text="Information">
+                        <content>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Phone:" />
+                                 <TextField fx:id="phoneField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <VBox fx:id="phoneErrorsContainer1" />
+                                 <Label text="Address:" />
+                                 <TextField fx:id="addressField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <VBox fx:id="addressErrorsContainer1" />
+                                 <Label fx:id="infoUpdateMessageLabel1" />
+                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#updateInformation" prefHeight="35.0" prefWidth="500.0" text="Update Information" />
+                              </children>
+                           </VBox>
+                        </content>
+                     </TitledPane>
+                     <TitledPane text="Change Email">
+                        <content>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Current Email:" />
+                                 <TextField fx:id="currentEmailField" editable="false" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <Label text="New Email:" />
+                                 <TextField fx:id="newEmailField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <VBox fx:id="newEmailErrorsContainer1" />
+                                 <Label text="Password:" />
+                                 <PasswordField fx:id="passwordForEmailField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <VBox fx:id="passwordForEmailErrorsContainer1" />
+                                 <Label fx:id="emailUpdateMessageLabel1" />
+                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#changeEmail" prefHeight="35.0" prefWidth="500.0" text="Change Email" />
+                              </children>
+                           </VBox>
+                        </content>
+                     </TitledPane>
+                     <TitledPane text="Change Password">
+                        <content>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Old Password:" />
+                                 <PasswordField fx:id="oldPasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <VBox fx:id="oldPasswordErrorsContainer1" />
+                                 <Label text="New Password:" />
+                                 <PasswordField fx:id="newPasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <VBox fx:id="newPasswordErrorsContainer1" />
+                                 <Label fx:id="passwordUpdateMessageLabel1" />
+                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#changePassword" prefHeight="35.0" prefWidth="500.0" text="Change Password" />
+                              </children>
+                           </VBox>
+                        </content>
+                     </TitledPane>
+                     <TitledPane layoutX="10.0" layoutY="763.0" text="Delete Account">
+                        <content>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Password:" />
+                                 <PasswordField fx:id="deletePasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <VBox fx:id="deletePasswordErrorsContainer1" />
+                                 <Label fx:id="deleteMessageLabel1" />
+                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#deleteAccount" prefHeight="35.0" prefWidth="500.0" style="-fx-background-color: #ed372d;" text="Delete Account" textFill="WHITE" />
+                              </children>
+                           </VBox>
+                        </content>
+                     </TitledPane>
+                  </children>
+               </VBox>
+            </children>
+         </HBox>
         </AnchorPane>
     </content>
    <padding>
