--- a/src/main/resources/dashbord.fxml
+++ b/src/main/resources/dashbord.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Button?>
 <AnchorPane id="AnchorPane" prefHeight="580.0" prefWidth="919.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dashbord">
     <children>
         <AnchorPane layoutX="32.0" layoutY="65.0" prefHeight="722.0" prefWidth="240.0" styleClass="sidebar">
@@ -127,7 +128,6 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-
                 <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="307.0" onMouseClicked="#showmarket" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
@@ -148,7 +148,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                 <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="393.0" onMouseClicked="#showcategory" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="393.0" onMouseClicked="#showcategory" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -188,7 +188,7 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-                                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="333.0" onMouseClicked="#showvoucher" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="333.0" onMouseClicked="#showvoucher" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -227,6 +227,28 @@
                     <padding>
                         <Insets left="5.0" />
                     </padding>
+                </HBox>
+
+                <HBox alignment="CENTER" spacing="10.0">
+                    <children>
+                        <ImageView fx:id="userPhoto" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true"/>
+                        <VBox>
+                            <Label fx:id="usernameLabel" text="Username" textFill="WHITE">
+                                <font>
+                                    <Font size="18.0"/>
+                                </font>
+                            </Label>
+                            <Button text="Logout" onAction="#handleLogout" styleClass="logout-button">
+                                <graphic>
+                                    <ImageView fitHeight="20.0" fitWidth="20.0">
+                                        <image>
+                                            <Image url="@/icons/remove.png"/>
+                                        </image>
+                                    </ImageView>
+                                </graphic>
+                            </Button>
+                        </VBox>
+                    </children>
                 </HBox>
             </children>
         </AnchorPane>
