--- a/src/main/resources/dashbord.fxml
+++ b/src/main/resources/dashbord.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,10 +15,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Button?>
 <AnchorPane id="AnchorPane" prefHeight="580.0" prefWidth="919.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dashbord">
     <children>
-        <AnchorPane layoutY="59.0" prefHeight="722.0" prefWidth="240.0" styleClass="sidebar">
+        <AnchorPane layoutX="-15.0" layoutY="61.0" prefHeight="722.0" prefWidth="240.0" styleClass="sidebar">
             <children>
                 <Pane layoutX="30.0" layoutY="37.0" prefHeight="30.0" prefWidth="180.0" styleClass="labbtn">
                     <children>
@@ -28,7 +28,7 @@
                         </Label>
                     </children>
                 </Pane>
-                <HBox alignment="CENTER_LEFT" layoutX="32.0" layoutY="122.0" onMouseClicked="#showpost" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+                <HBox alignment="CENTER_LEFT" layoutX="30.0" layoutY="123.0" onMouseClicked="#showpost" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
                     <children>
                         <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -228,36 +228,14 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
-
-                <HBox alignment="CENTER" spacing="10.0">
-                    <children>
-                        <ImageView fx:id="userPhoto" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true"/>
-                        <VBox>
-                            <Label fx:id="usernameLabel" text="Username" textFill="WHITE">
-                                <font>
-                                    <Font size="18.0"/>
-                                </font>
-                            </Label>
-                            <Button text="Logout" onAction="#handleLogout" styleClass="logout-button">
-                                <graphic>
-                                    <ImageView fitHeight="20.0" fitWidth="20.0">
-                                        <image>
-                                            <Image url="@/icons/remove.png"/>
-                                        </image>
-                                    </ImageView>
-                                </graphic>
-                            </Button>
-                        </VBox>
-                    </children>
-                </HBox>
             </children>
         </AnchorPane>
-        <ImageView fitHeight="44.0" fitWidth="51.0" layoutX="14.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="44.0" fitWidth="51.0" layoutX="8.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@images/icons8_james_bond_32px.png" />
             </image>
         </ImageView>
-        <Label alignment="CENTER" layoutX="69.0" layoutY="23.0" text="Lost &amp; Found" textFill="#2262c6">
+        <Label alignment="CENTER" layoutX="60.0" layoutY="24.0" text="Lost &amp; Found" textFill="#2262c6">
             <font>
                 <Font name="Berlin Sans FB" size="20.0" />
             </font>
@@ -319,6 +297,21 @@
                </children>
             </HBox>
          </children></VBox>
+
+          <HBox alignment="CENTER" layoutX="1061.0" layoutY="19.0" spacing="10.0">
+              <children>
+                  <ImageView fx:id="userPhoto" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" />
+                  <VBox>
+                      <Label fx:id="usernameLabel" prefHeight="65.0" prefWidth="80.0" text="Username">
+                          <font>
+                              <Font size="18.0" />
+                          </font>
+                      </Label>
+
+                  </VBox>
+              </children>
+          </HBox>
+             <Button layoutX="1246.0" layoutY="39.0" onAction="#handleLogout" styleClass="logout-button" text="Logout" />
 
 
     </children>
