--- a/src/main/resources/dashbord.fxml
+++ b/src/main/resources/dashbord.fxml
@@ -228,6 +228,26 @@
                         <Insets left="5.0" />
                     </padding>
                 </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="30.0" layoutY="92.0" onMouseClicked="#showpost" prefHeight="30.0" prefWidth="180.0" styleClass="sidebar-btn-text">
+               <children>
+                  <ImageView fitHeight="18.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8_steering_wheel_64px.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <Label onMouseClicked="#redirectToStats" text="Stats" textFill="#a2bee8">
+                     <font>
+                        <Font name="Cambria" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </HBox>
             </children>
         </AnchorPane>
         <ImageView fitHeight="44.0" fitWidth="51.0" layoutX="8.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
@@ -265,7 +285,7 @@
             <HBox prefHeight="338.0" prefWidth="1226.0">
                <children>
             
-                        <BarChart fx:id="statisticsChart" prefHeight="338.0" prefWidth="375.0">
+                   <BarChart fx:id="statisticsChart" prefHeight="338.0" prefWidth="375.0">
                             <xAxis>
                                 <CategoryAxis label="Type" />
                             </xAxis>
@@ -295,6 +315,11 @@
                        </yAxis>
                    </BarChart>
 
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="338.0" prefWidth="1226.0" spacing="100.0">
+               <children>
+
                    <BarChart fx:id="userStatusChart" prefHeight="338.0" prefWidth="375.0">
                        <xAxis>
                            <CategoryAxis label="Status" />
@@ -303,7 +328,14 @@
                            <NumberAxis label="Count" />
                        </yAxis>
                    </BarChart>
-
+                   <BarChart fx:id="postsChart" prefHeight="338.0" prefWidth="375.0">
+                       <xAxis>
+                           <CategoryAxis label="Post type" />
+                       </xAxis>
+                       <yAxis>
+                           <NumberAxis label="Count" />
+                       </yAxis>
+                   </BarChart>
                </children>
             </HBox>
          </children></VBox>
