--- a/src/main/resources/Fxml/Questionsadmin.fxml
+++ b/src/main/resources/Fxml/Questionsadmin.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="475.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.Questionsadmin">
     <children>
         <Label layoutX="248.0" layoutY="14.0" style="-fx-font-size: 20px;" text="Questions and Answers" AnchorPane.leftAnchor="248.0" AnchorPane.topAnchor="14.0">
-         <font>
-            <Font name="Andalus" size="22.0" />
-         </font></Label>
-        <ListView fx:id="listView" layoutY="66.4" prefHeight="409.0" prefWidth="738.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="66.0" />
+            <font>
+                <Font name="Andalus" size="22.0" />
+            </font>
+        </Label>
+        <Pagination fx:id="pagination" layoutY="66.4" prefHeight="409.0" prefWidth="738.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="66.0" />
     </children>
 </AnchorPane>
