--- a/src/main/resources/dashb.fxml
+++ b/src/main/resources/dashb.fxml
@@ -113,6 +113,11 @@
                                         <Font name="System Bold" size="18.0" />
                                     </font>
                                 </Label>
+                                <Label prefHeight="40.0" prefWidth="192.0" text="Market" onMouseClicked="#showMarket" textFill="#a1a1a1">
+                                    <font>
+                                        <Font name="System Bold" size="18.0" />
+                                    </font>
+                                </Label>
                             </children>
                             <padding>
                                 <Insets left="20.0" right="20.0" />
