--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -19,7 +19,7 @@
     1
   ); /* subtle shadow effect */
   -fx-cursor: hand; /* Changes the cursor to a hand when hovered over the button */
-  -fx-background-color: #4e9f3d; /* An inviting green color */
+  -fx-background-color: #ff7555; /* An inviting green color */
   -fx-background-radius: 20;
   -fx-text-fill: white;
 }
@@ -58,7 +58,7 @@
     1
   ); /* subtle shadow effect */
   -fx-cursor: hand; /* Changes the cursor to a hand when hovered over the button */
-  -fx-background-color: #4e9f3d; /* An inviting green color */
+  -fx-background-color: #ff7555; /* An inviting green color */
   -fx-background-radius: 20;
   -fx-text-fill: white;
 }
@@ -118,7 +118,7 @@
 }
 
 .sponsor-button {
-  -fx-background-color: #4caf50; /* Set background color */
+  -fx-background-color: #ff7555; /* Set background color */
   -fx-text-fill: white; /* Set text color */
   -fx-font-size: 14px; /* Set font size */
   -fx-padding: 10px 20px; /* Add padding */
@@ -195,7 +195,7 @@
 
 .select-button,
 .submit--button {
-  -fx-background-color: #4caf50; /* Green */
+  -fx-background-color: #ff7555; /* Green */
   -fx-border: none;
   -fx-color: white;
   -fx-padding: 10px 20px;
